Bug 95210 - Opening "Position and Size" mutilates shapes
Summary: Opening "Position and Size" mutilates shapes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-10-20 23:48 UTC by Luke
Modified: 2021-08-09 10:44 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample shapes to test the bug (24.50 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2015-10-20 23:48 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2015-10-20 23:48:07 UTC
Created attachment 119812 [details]
Sample shapes to test the bug

1. In MSO create insert a shape into a doc and save
2. Open in a recent build of LibreOffice
3. Right-Click on the shape -> Position and Size

I was able to reproduce this files in Writer, Calc, and Impress. It's a regression as I was not able to reproduce it with LibreOffice 4.3.
Comment 1 Buovjaga 2015-10-21 16:06:43 UTC
Confirmed.
No problems in 4.3.0.1

Win 7 Pro 64-bit, Version: 5.0.2.2 (x64)
Build ID: 37b43f919e4de5eeaca9b9755ed688758a8251fe
Locale: fi-FI (fi_FI)
Comment 2 raal 2015-10-22 10:46:09 UTC
Please could you describe more the problem? I did:
2. Open your file in a recent build of LibreOffice
3. Right-Click on the shape -> Position and Size

and what now? Looks like before.
Thank you
Comment 3 Buovjaga 2015-10-22 11:10:31 UTC
(In reply to raal from comment #2)
> Please could you describe more the problem? I did:
> 2. Open your file in a recent build of LibreOffice
> 3. Right-Click on the shape -> Position and Size
> 
> and what now? Looks like before.
> Thank you

Don't click on the lightning shape, it doesn't change. All the others change

Apologies, I mentioned the wrong version: 5.0.2 is fine!

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: fcc2415ade6ae93710bbbda9f7e163045e323105
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-10-21_16:55:13
Locale: fi-FI (fi_FI)
Comment 5 Luke 2015-10-25 10:30:19 UTC
Caolán,
I narrowed this regression down to commit: b859d84e471fdb70b61607d2d919a7907d074bd0 

It looks like it needs some more work to handle drawingML shapes. Thank you for all you done to improve and clean up LibreOffice.
Comment 6 Caolán McNamara 2015-11-04 21:23:49 UTC
hmm, I think the control points of those shapes are a little busted or funky in some way. Manually moving the yellow controls (which is what effectively the dialog does to find the bounds and then reset them to original) also shows odd behaviour.

So I need to look into why resetting the same original control positions as they start with doesn't work in this case.
Comment 7 Commit Notification 2015-11-05 13:45:07 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=eafd3ee3f01bceef0eb3327be3139a8eee2a2b2e

tdf#95210 SetHandleControllerPosition is busted wrt HandleFlags::REFX

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Robinson Tryon (qubit) 2015-12-17 10:34:37 UTC Comment hidden (obsolete)