tdf#95210 SetHandleControllerPosition is busted wrt HandleFlags::REFX

so instead of saving the initial pos and trying to restore the pos, instead use
a bigger hammer and save the entire geometry and restore that instead.

Change-Id: Id06ea8f205f30771987089c5dc949bb52adc7a27